[package]
name = "math"
version = "0.1.0"
authors = ["Chevy Ray Johnston <happytrash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
approx = "^0.4.0"

[dependencies.serde]
version = "1.0.124"
optional = true
default-features = false
features = ["derive"]